--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "autoprefixer": "^10.0.2",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
