--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "nookies": "^2.5.0",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
     "postcss-preset-env": "^6.7.0",
