auth context added

--- a/backend/api/profile/models/profile.settings.json
+++ b/backend/api/profile/models/profile.settings.json
@@ -23,6 +23,21 @@
       "plugin": "users-permissions",
       "model": "user",
       "via": "profile"
+    },
+    "email": {
+      "type": "email",
+      "required": true,
+      "unique": true
+    },
+    "username": {
+      "type": "string",
+      "unique": true,
+      "required": true
+    },
+    "password": {
+      "type": "password",
+      "required": true,
+      "private": true
     }
   }
 }
