--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@testing-library/user-event": "^12.2.2",
     "autoprefixer": "^10.0.2",
     "babel-jest": "^26.6.3",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
-    "nookies": "^2.5.0",
+    "js-cookie": "^2.2.1",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
     "postcss-preset-env": "^6.7.0",
