--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
     "postcss-preset-env": "^6.7.0",
+    "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   }
 }
