--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "postcss-cli": "^8.3.0",
     "postcss-preset-env": "^6.7.0",
     "react-icons": "^4.1.0",
+    "react-responsive": "^8.2.0",
     "swr": "^0.3.9",
     "tailwindcss": "^2.0.1",
+    "use-persisted-state": "^0.3.3",
     "yarn": "^1.22.10"
   }
 }
