--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "tailwind": "npx tailwindcss build src/styles/tailwind.css -o src/styles/app.css",
     "prestart": "postcss src/styles/app.css -o src/App.css",
-    "start": "npm run prestart && next start",
+    "build": "yarn tailwind && yarn prestart && next build",
+    "start": "next start",
     "test": "jest"
   },
   "dependencies": {
@@ -17,17 +18,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "add": "^2.0.6",
     "autoprefixer": "^10.0.2",
     "babel-jest": "^26.6.3",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
-    "jest-dom": "^4.0.0",
     "nookies": "^2.5.0",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
@@ -36,7 +34,6 @@
     "react-responsive": "^8.2.0",
     "swr": "^0.3.9",
     "tailwindcss": "^2.0.1",
-    "use-persisted-state": "^0.3.3",
-    "yarn": "^1.22.10"
+    "use-persisted-state": "^0.3.3"
   }
 }
