enforced consistent code style

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["src/components/*"],
+      "@/containers/*": ["src/containers/*"],
+      "@/context/*": ["src/context/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/validation/*": ["src/validation/*"],
+      "@/pages/*": ["pages/*"]
+    }
   }
 }
