--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "lint": "eslint --ext .js ./",
+    "lint-fix": "eslint --fix --ext .js ./",
     "tailwind": "npx tailwindcss build src/styles/tailwind.css -o src/styles/app.css",
     "prestart": "postcss src/styles/app.css -o src/App.css",
     "build": "yarn tailwind && yarn prestart && next build",
@@ -22,8 +24,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/jest": "^26.0.19",
     "autoprefixer": "^10.0.2",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.16.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
     "nookies": "^2.5.0",
