added msw server for testing external fetch

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,13 +37,14 @@
       "sort-imports": "off",
       "import/order": "off",
       "array-bracket-spacing":"warn",
+      "arrow-body-style": "off",
       "curly": "warn",
       "camelcase": "off",
       "dot-location": "off",
       "init-declarations": "off",
       "import/no-unresolved": "off",
       "func-style": ["error", "declaration"],
-      "max-statements": ["warn", 20],
+      "max-statements": "off",
       "linebreak-style": "off",
       "implicit-arrow-linebreak": "off",
       "semi": ["error", "always"],
