--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^3.10.1",
-    "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
+    "msw": "^0.24.2",
     "nookies": "^2.5.0",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
@@ -43,6 +43,7 @@
     "react-responsive": "^8.2.0",
     "swr": "^0.3.9",
     "tailwindcss": "^2.0.1",
-    "use-persisted-state": "^0.3.3"
+    "use-persisted-state": "^0.3.3",
+    "whatwg-fetch": "^3.5.0"
   }
 }
