authentication fix, focus styles added

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_URL={{your backend api to connect}}
+REDIRECT_URI={{spotify auth page redirect}}
 SPOTIFY_API=https://api.spotify.com
 SPOTIFY_AUTH_API=https://accounts.spotify.com
 SPOTIFY_CLIENT_ID={{spotify api client id}}
